changes to images and randomize gallery order

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div class="section about" id="about">
     <div class="row">
         <div class="col">
-            <img class="bg-color" src="/home/img/about.jpg" alt="">
+            <img class="bg-color" src="/home/img/about-2.jpg" alt="">
         </div>
         <div class="col">
             <h2>
@@ -131,18 +131,7 @@
 <div class="section gallery" id="gallery">
     <div class="row flex-col">
         <div class="slider-container" item-display-d="4" item-display-t="3" item-display-m="1">
-            <div class="slider-width" id="gallery-target">
-                <img src="/home/img/gallery1.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery2.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery3.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery4.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery5.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery6.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery7.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery9.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery10.jpg" alt="By Hauspie">
-                <img src="/home/img/gallery11.jpg" alt="By Hauspie">
-            </div>
+            <div class="slider-width" id="gallery-target"></div>
         </div>
         <div class="btn-wrapper">
             <a class="prev slider-nav" onclick="prev()">
