--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </a>
                 <a href="mailto:chateaubriandbyhauspie@hotmail.com" class="phone">
                     <i class="fa fa-envelope"></i>
-                    chateaubriandbyhauspie@hotmail.com
+                    Stuur ons een email
                 </a>
                 <div class="overlay"></div>
             </div>
@@ -191,7 +191,7 @@
                     <input type="email" value="" name="EMAIL" placeholder="Emailadres*" required>
                     <input type="text" value="" name="PHONE" placeholder="GSM nummer*" required>
                     <input type="text" value="" name="MESSAGE"placeholder="Jouw bericht">
-                    <input type="submit" value="Verstuur➔" name="subscribe" class="btn">
+                    <input type="submit" value="Verstuur ➔" name="subscribe" class="btn">
                 </form>
             </div>
         </div>
