--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                 Let's MEAT.
             </h2>
             <p>
-                Château Briand by Hauspie dat staat voor 3 generaties, 2 families en 1 passie.
+                Chateau Briand by Hauspie dat staat voor 3 generaties, 2 families en 1 passie.
                 <br>
                 Generatie op generatie stroomt de passie voor het vlees door de aderen van onze familie. 
                 <br><br>
                 De liefde voor het métier ontstond bij zowel Lize als Matthias van jongs af aan. In de beenhouwerij brengen we nu het beste van de twee werelden samen.
                 <br>
-                De bekende beenhouwerij Château Briand in de Panne en de gerenommeerde West-Vlaamse vleesgroothandel Hauspie. 
+                De bekende beenhouwerij Chateau Briand in de Panne en de gerenommeerde West-Vlaamse vleesgroothandel Hauspie. 
                 <br><br>
                 Versheid is bij ons de basis. Want de dieren worden door de grootvader grootgebracht op de familieboerderij. Zo kennen we het exacte traject dat jouw stuk vlees heeft afgelegd voor het op je bord terechtkomt.
             </p>
