--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Ambacht en traditie in een eigentijds jasje | By Hauspie
+        Slagerij in Oostduinkerke met passie voor vlees | Chateaubriad By Hauspie
     </title>
-    <meta name="description" content="Van het (h)eerlijke stuk vlees op je bord, onze verrukkelijke kip-aan-het-spit, tot de in huisgemaakte traiteurgerechten en fijne vleeswaren.">
+    <meta name="description" content="In onze beenhouwerij kan je terecht voor een heerlijk stukje vlees. Van runds- tot varkensvlees, van lams- tot kippenvlees of kip-aan-het-spit. Fijne vleeswaren, charcuterie en huisgemaakte traiteurgerechten zijn onze specialiteit.">
 
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/header-footer.css">
