--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="container">
                 <a class="nav-logo" href="/">
-                    <img class="logo" src="/assets/logo/logo.png" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.png" alt="Logo Chateaubriad By Hauspie">
                 </a>
                 <a class="nav" href="/">
                     Home
@@ -52,7 +52,7 @@
         <div class="topnav-content-sm">
             <div class="header-col">
                 <a href="/">
-                    <img class="logo" src="/assets/logo/logo.jpg" alt="Logo">
+                    <img class="logo" src="/assets/logo/logo.jpg" alt="Logo Chateaubriad By Hauspie">
                 </a>
             </div>
             <div class="header-col">
@@ -104,7 +104,7 @@
 <div class="section about" id="about">
     <div class="row">
         <div class="col">
-            <img class="bg-color" src="/home/img/about-2.jpg" alt="">
+            <img class="bg-color" src="/home/img/about-2.jpg" alt="Over Chateaubriad By Hauspie">
         </div>
         <div class="col">
             <h2>
@@ -201,7 +201,7 @@
 <footer>
     <div class="section footer" id="footer">
         <div class="row">
-            <img src="/assets/logo/logo.png" alt="Logo" class="logo">
+            <img src="/assets/logo/logo.png" alt="Logo" class="logo Chateaubriad By Hauspie">
             <p class="legal">
                 Leopold II-laan 12
                 <br>
