--- a/index.html
+++ b/index.html
@@ -94,9 +94,14 @@
             <br><br>
             Met veel goesting verwelkomen we jou in onze slagerij.
         </p>
-        <a href="#contact" class="btn ghost white">
-            Openingsuren
-        </a>
+        <div class="btn-wrapper">
+            <a href="/pdf/prijslijst.pdf" target="_blank" class="btn">
+                Prijslijst feestdagen
+            </a>
+            <a href="#contact" class="btn ghost white">
+                Openingsuren
+            </a>
+        </div>
     </div>
     <div class="overlay"></div>
 </div>
